versions/v1.13.1/assets/commands/rust-help.md
---
description: schematize-rust — lista todos os comandos disponíveis e o que cada um faz
---

Mostre ao usuário a lista de comandos do conjunto **schematize-rust**, em formato
de tabela legível, exatamente com este conteúdo (ajuste se houver comandos novos
instalados em `.claude/commands/`):

| Comando | O que faz |
|---|---|
| `/rust-help` | Lista todos os comandos do schematize-rust (este). |
| `/rust-load` | **Carrega à força TODO o corpo normativo** (DDD/arquitetura, clean code, segurança, dados, testes, operação) no contexto e passa a aplicá-lo no projeto como regra inegociável. |
| `/rust-claude` | Cria ou **atualiza (sobrescreve)** o `CLAUDE.md` da raiz com a versão atual da skill (backup se houver customização local). |
| `/rust-cc` | Context compact: gera `context.md` + `checklist.md` em `<projeto>_archive/context/` e roda `/compact`. |
| `/rust-handoff` | Gera o handoff (`context.md` + `checklist.md`) **sem** compactar — ideal pra fim de sessão ou troca de tarefa. |
| `/rust-qa` | Q.A. no contexto Rust (aplica a schematize-qa: /qa-plan → /qa-run). |
| `/rust-review` | Roda o gate da Definition of Done e dos anti-padrões (§35, §37): arquivo >750 linhas bloqueia / >300 úteis flag, função sem doc-comment, índice desatualizado, macaquices de segurança. |
| `/rust-iam` | Força/audita/scaffolda o **IAM da casa** (auth como microserviço Rust separado em `auth.<domain>`, ID≠email, ≥2 fatores, ReBAC multi-tenant deny-default, sessão longa/logout irreversível) ou porta um auth legado (prioridade 0). Plan-first. |
| `/rust-index` | (Re)gera o índice de microfunções (§39) a partir dos doc-comments das funções. |
| `/rust-ops` | Audita/scaffolda o `<projeto>_ops` (interface única): verifica o fluxo de ambientes (dev→local→github→hml→prd), a instalação paralela (`nproc`) e a independência dos serviços. |

Depois da tabela, diga em uma linha que o detalhe normativo está na skill
`schematize-rust` (referências em `references/`) e que o site é `skills.schematize.me/rust`.
